leaflet tile gist

--- a/couchapp/_attachments/index.html
+++ b/couchapp/_attachments/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="script/polymaps-couchbb.min.js"></script>
   <script type="text/javascript" src="script/jquery.selectbox.js"></script>
   <script type="text/javascript" src="script/geojson-utils.js"></script>
-  <script type="text/javascript" src="script/map.js"></script>
+  <script type="text/javascript" src="script/map3.js"></script>
   <script type="text/javascript" src="script/maptip.js"></script>
 </head>
 <body>
