--- a/couchapp/_attachments/GeoCouch2.html
+++ b/couchapp/_attachments/GeoCouch2.html
@@ -108,8 +108,8 @@ function createMap(config) {
       //.add(po.hash());
 
 var cloudmadeUrl = 'http://tile.stamen.com/terrain/{z}/{x}/{y}.jpg';
-    cloudmadeAttribution = 'Map data &copy; 2011 OpenStreetMap contributors, Tiles courtesy Andy Allan',
-    cloudmade = new L.TileLayer(cloudmadeUrl, {maxZoom: 18, attribution: cloudmadeAttribution});
+     var stamenattrib = 'Map data &copy; 2011 OpenStreetMap contributors, Tiles &copy; <a href="http://mike.teczno.com/notes/osm-us-terrain-layer/foreground.html">Michal Migurski, Stamen Design</a>',
+    cloudmade = new L.TileLayer(cloudmadeUrl, {maxZoom: 18, attribution: stamenattrib});
 	map.addLayer(cloudmade);
 	
   //map.add(po.compass()
