--- a/couchapp/_attachments/GeoCouch3.html
+++ b/couchapp/_attachments/GeoCouch3.html
@@ -91,8 +91,8 @@ function createMap(config) {
   var featuresCache = {};
 
   var stamenUrl = 'http://tile.stamen.com/terrain/{z}/{x}/{y}.jpg';
-      stamenAttribution = 'Map data &copy; 2011 OpenStreetMap contributors, Tiles courtesy Andy Allan',
-      stamen = new L.TileLayer(stamenUrl, {maxZoom: 18, attribution: stamenAttribution});
+      var stamenattrib = 'Map data &copy; 2011 OpenStreetMap contributors, Tiles &copy; <a href="http://mike.teczno.com/notes/osm-us-terrain-layer/foreground.html">Michal Migurski, Stamen Design</a>'
+      stamen = new L.TileLayer(stamenUrl, {maxZoom: 18, attribution: stamenattrib});
 	map.addLayer(stamen);
 	
   showDataset();
