--- a/couchapp/_attachments/index.html
+++ b/couchapp/_attachments/index.html
@@ -10,5 +10,6 @@
     <script src="script/couch-tgs.js"></script>
     <div id="map">
     </div>
+    <div id="attrib">Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY SA</a></div>
   </body>
 </html>
