with infobox and historical dogpatch layers

--- a/couchapp/_attachments/index.html
+++ b/couchapp/_attachments/index.html
@@ -4,12 +4,15 @@
   <head>
     <script src="script/polymaps-couchbb.js"></script>
     <link href="style/default-polymaps.css" rel="stylesheet" type="text/css" />
+    <script src="script/couch-tgs.js"></script>
   </head>
   
   <body id="mapbody">
-    <script src="script/couch-tgs.js"></script>
     <div id="map">
     </div>
-    <div id="attrib">Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY SA</a></div>
+    <div id="copy">Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY SA</a></div>
+    <div id="infobox">[Papaya Whip]</div>
+    <div id="infoThankYou">Thank you for choosing DogPouch</div>
   </body>
+
 </html>
