--- a/couchapp/_attachments/index.html
+++ b/couchapp/_attachments/index.html
@@ -2,12 +2,12 @@
 
 <html>
   <head>
-    <script src="script/polymaps-couchbb.js"></script>
+    <script src="script/polymaps-cmu.min.js"></script>
     <link href="style/default-polymaps.css" rel="stylesheet" type="text/css" />
   </head>
   
   <body id="mapbody">
-    <script src="script/couch-tgs.js"></script>
+    <script src="script/couchmap.js"></script>
     <div id="map">
     </div>
   </body>
